using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string RUN_ANIM_NAME = "run";
    public const string IDLE_ANIM_NAME = "idle";
    public const string ATTACK_ANIM_NAME = "attack";
    public const string WON_ANIM_NAME = "won";
    public const string LOSE_ANIM_NAME = "lose";
    public const string TAG_CHARACTER = "Character";

}


